--- a/README
+++ b/README
@@ -7,4 +7,4 @@ kernel
 ======
 cd <kernel path>
 cp mediatek-configs .config
-TARGET_PRODUCT=tinno77_ics2 MTK_ROOT_CUSTOM=../mediatek/custom make
+TARGET_PRODUCT=s8083 MTK_ROOT_CUSTOM=../mediatek/custom make
