--- a/README
+++ b/README
@@ -25,17 +25,21 @@ Créer l'image boot
 Télécharger les scripts: unpack-MT65xx.pl et repack-MT65xx.pl.
 
 Prendre le fichier boot.img d'origine.
-unpack-MT65xx.pl boot.img
+unpack-MT65xx.pl boot_origine_wiko_v15.img
 
 Récupérer l'entête du noyau d'origine.
-dd if=boot.img-kernel.img of=zImage_mod bs=512 count=1
+cp header zImage_mod
+( ou dd if=zImage_mod boot_origine_wiko_v15.img-kernel.img of=zImage_mod bs=512 count=1 )
+
 
 l'intégrer au nouveau noyau.
 dd if=zImage of=zImage_mod bs=512 seek=1
 
 Recréer l'image boot
-repack-MT65xx.pl -boot zImage_mod boot.img-ramdisk img_boot.img
+repack-MT65xx.pl -boot zImage_mod boot_origine_wiko_v15.img-ramdisk boot.img
+
+Insérer boot.img à la racine de flash.zip (ou unzip zip)
 
 Flasher
 =======
-Si le smartphone boot en boucle, le header est mauvais.
+Si le smartphone boot en boucle, le header est certainement mauvais (sinon, recommencez).
